# digital-actor

./: .gitignore  .infisical.json  .pre-commit-config.yaml  example_say_smoketest.py  example_streaming_serialization_test.py  example_tts_smoketest.py  gitignore  pyproject.toml  run-game-server.bat  run-server.bat  settings.yaml
.claude/skills/scenario-architect/: SKILL.md
.claude/skills/scenario-writer/: SKILL.md
.langfuse_prompts/common/: dialogue_summary_wrapper.txt  prev_scene_wrapper.txt
.langfuse_prompts/dialogue/: get_next_line.txt  get_respond_line.txt  get_trigger_line.txt  idle_instruction.txt  interrupt_multi_instruction.txt  interrupt_single_instruction.txt
.langfuse_prompts/query/: query_followup.txt  query_statement.txt
.langfuse_prompts/scenarios/embodiment_demo/: back_story.txt  scenario.json
.langfuse_prompts/scenarios/goblin/: back_story.txt  scene_supplement.txt
.langfuse_prompts/summary/: generate_summary.txt  update_summary.txt
docs/scenarios/: embodiment_demo-blueprint.md  pirate_tavern-blueprint.md
metahuman_actor/: actor.py  data_models.py  http_api.py  scenario.py  scene.py  server.py  settings.py  stage.py  stage_context.py  terminal.py
metahuman_actor/game_driven/: __init__.py  scenario.py  scene.py  scene_data.py  server.py  stage.py  world_state.py
metahuman_actor/scripts/: persona.json  persona_neutts.json
tests/digital_actor/: test_speech_metrics.py
tests/metahuman_actor/: test_http_api.py  test_scenario.py  test_stage_load_unload.py  test_stage_swap.py  test_ws_scenario.py
(+110 files in other folders)
