[project]
name = "metahuman"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "digital-actor",
    "tts_lib[local]",
    "websockets>=14.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "dvc>=3.0",
    # Pin to a version that has Windows CUDA wheels on the cu128 index below.
    # PyPI's torch 2.12 ships CPU-only on Windows (CUDA is Linux-marker-gated),
    # so without this pin uv picks 2.12+cpu. torch 2.11 pairs with torchaudio 2.11.
    "torch==2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
digital-actor = { path = "./packages/digital_actor", editable = true }
tts_lib = { git = "ssh://git@github.com/iconic-games/iconic-python-lib", subdirectory = "packages/tts_lib" }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metahuman_actor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
extraPaths = ["packages/digital_actor"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.isort]
profile = "black"
line_length = 120

[tool.uv]
package = false
